--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "test": "echo \"No tests found\" && exit 0",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -25,8 +24,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
