Changes in yml file

--- a/.github/workflows/main_azureaimodel.yml
+++ b/.github/workflows/main_azureaimodel.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: build
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,16 +46,14 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: build
       
-      - name: Build App
-        run: |
-          npm install
-          npm run build
-
-- name: Deploy to Azure Web App
-  uses: azure/webapps-deploy@v3
-  with:
-    app-name: AiModel
-    slot-name: Production
-    publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-    package: ./build
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
+        with:
+          app-name: 'AzureAiModel'
+          slot-name: 'Production'
+          package: build
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4961F13E2D70488994031501C9BAB583 }}
+          deployment-method: 'auto'
