--- a/.github/workflows/main_aimodel.yml
+++ b/.github/workflows/main_aimodel.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: build
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,6 +46,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: build
       
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
@@ -53,5 +54,6 @@ jobs:
         with:
           app-name: 'AiModel'
           slot-name: 'Production'
-          package: .
+          package: build
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D011EF35F2524BDEA529DA0095AD5B77 }}
+          deployment-method: 'auto'
