--- a/web.config
+++ b/web.config
@@ -17,6 +17,14 @@
     <staticContent>
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
     </staticContent>
+    <httpErrors existingResponse="PassThrough" />
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="30000000" />
+      </requestFiltering>
+    </security>
   </system.webServer>
 </configuration> 
